--- a/css/style.css
+++ b/css/style.css
@@ -189,10 +189,11 @@ html {
   line-height: 100%;
   letter-spacing: -4%;
   text-transform: uppercase;
+  transition: transform 0.8s ease;
 }
 
 .promo-btn:hover {
-  transform: scale(1.2);
+  transform: scale(1.05);
 }
 
 .promo-footer {
@@ -300,10 +301,11 @@ h3 {
   line-height: 100%;
   letter-spacing: -2%;
   text-transform: uppercase;
+  transition: transform 0.8s ease;
 }
 
 .programs-card-button:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
 }
 
 /* BENEFITS */
@@ -506,12 +508,24 @@ h3 {
   margin-bottom: 116px;
 }
 
+.teachers-custom-next {
+  transition: transform 0.8s ease;
+}
+
+.teachers-custom-prev {
+  transition: transform 0.8s ease;
+}
+
 .teachers-custom-next:hover {
-  transform: scale(1.2);
+  transform: scale(1.05);
 }
 
 .teachers-custom-prev:hover {
-  transform: scale(1.2);
+  transform: scale(1.05);
+}
+
+.teacher-card {
+  padding: 5px;
 }
 
 .teacher-name {
@@ -541,6 +555,11 @@ h3 {
   border: none;
   border-radius: 48px;
   background-color: #108bae;
+  transition: transform 0.8s ease;
+}
+
+.teacher-button:hover {
+  transform: scale(1.05);
 }
 
 /* REVIEWS */
@@ -608,13 +627,22 @@ h3 {
   margin: 0;
 }
 
+.reviews-custom-next {
+  transition: transform 0.8s ease;
+}
+
+.reviews-custom-prev {
+  transition: transform 0.8s ease;
+}
+
 .reviews-custom-next:hover {
-  transform: scale(1.2);
+  transform: scale(1.05);
 }
 
 .reviews-custom-prev:hover {
-  transform: scale(1.2);
+  transform: scale(1.05);
 }
+
 /* FAQ */
 
 #faq {
@@ -631,10 +659,11 @@ h3 {
   background-color: #108bae;
   border: none;
   border-radius: 38px;
+  transition: transform 0.8s ease;
 }
 
 .faq-button-question:hover {
-  transform: scale(1.2);
+  transform: scale(1.05);
 }
 
 .faq-cards {
