--- a/css/media.css
+++ b/css/media.css
@@ -173,7 +173,8 @@
   }
   .benefits-card-info {
     margin-top: 20px;
-    width: 244px;
+    width: 100%;
+    box-sizing: border-box;
     height: auto;
     padding: 10px;
   }
@@ -279,6 +280,9 @@
     font-size: 14px;
   }
   /* FAQ */
+  #faq {
+    margin-bottom: 30px;
+  }
   .faq-button-question {
     display: none;
   }
@@ -289,7 +293,7 @@
     color: #ffffff;
     font-size: 24px;
     font-weight: 510;
-    background-color: #108bae;
+    background-color: #074e62;
     border: none;
     border-radius: 12px;
     margin-top: 20px;
@@ -303,6 +307,8 @@
   }
   .faq-question {
     font-size: 16px;
+    padding: 10px;
+    gap: 10px;
   }
   .faq-question p {
     font-size: 16px;
@@ -379,5 +385,107 @@
   .footer-bottom {
     flex-direction: column;
     padding: 10px;
+  }
+  /* MODAL */
+  .lesson-modal-title {
+    font-size: 32px;
+  }
+  .lesson-modal-subtitle {
+    font-size: 14px;
+  }
+  .rounded-modal {
+    border-radius: 8px;
+  }
+  .swal2-input {
+    font-size: 14px;
+    height: 48px;
+    width: 100%;
+    margin: 10px 0;
+  }
+  .swal2-input::placeholder {
+    font-size: 14px;
+  }
+  .swal2-confirm {
+    width: 100%;
+    height: 52px;
+    font-size: 16px;
+    margin: 0;
+    display: flex;
+    align-items: center;
+  }
+  .confirm-button {
+    font-size: 16px;
+  }
+  .swal2-actions {
+    margin: 0;
+    padding: 0 28px;
+  }
+  /* BURGER */
+  .main-header {
+    position: relative;
+    z-index: 1002; /* выше оверлея */
+  }
+  .menu {
+    position: absolute;
+    top: 50px;
+    left: 0;
+    z-index: 1001;
+    margin: 0 50px;
+    background: white;
+    border-radius: 12px;
+    padding: 5px;
+  }
+  .overlay {
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.4);
+    backdrop-filter: blur(4px);
+    z-index: 1000;
+  }
+  .overlay:not(.hidden) {
+    clip-path: polygon(
+      0 0,
+      100% 0,
+      100% var(--header-height),
+      0 var(--header-height),
+      0 100%,
+      100% 100%,
+      100% var(--header-height),
+      0 var(--header-height)
+    );
+  }
+  .burger-btn {
+    font-size: 24px;
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+  .menu-content {
+    width: 100%;
+    gap: 24px;
+  }
+  .menu-content ul {
+    width: 100%;
+    list-style: none;
+    padding: 0;
+    margin-top: 20px;
+    gap: 20px;
+  }
+  .menu-content a {
+    text-decoration: none;
+    color: #1f1f1f;
+    font-weight: 510;
+    font-size: 14px;
+  }
+  #menu-number {
+    width: 100%;
+    height: 52px;
+    border: none;
+    border-radius: 8px;
+    background-color: #074e62;
+    font-size: 16px;
+    font-weight: 510;
+    color: #ffffff;
+    text-transform: uppercase;
   }
 }
